Bug 283302 - Partially maximized windows snap back when moved
Summary: Partially maximized windows snap back when moved
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: core (other bugs)
Version First Reported In: git master
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 283925 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-10-04 09:21 UTC by Christoph Feck
Modified: 2012-06-25 20:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9rc1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2011-10-04 09:21:02 UTC
To reproduce:
- start Konsole
- maximize the window vertically
- drag the window so that it is both horizontally and vertically partially outside the screen
- notice that it snaps back vertically when released
Comment 1 Thomas Lübking 2011-10-04 12:59:22 UTC
I assume that Martin & Lubos have coordinated this, so it's probably intended. *shrug*

https://projects.kde.org/projects/kde/kde-workspace/repository/revisions/602572955659fad30b1f9148f2b4a2453dc687e3
Comment 2 Thomas Lübking 2011-10-19 12:52:14 UTC
*** Bug 283925 has been marked as a duplicate of this bug. ***
Comment 3 Nikita Skovoroda 2011-11-01 03:27:20 UTC
Fully maximized windows do not have this behaviour: they just can't be moved, they don't have the resize arrows. That looks much better.

Snapping back on move/resize looks like a bug and is a bad thing to do.
Comment 4 Thomas Lübking 2011-11-01 12:47:08 UTC
*** Bug 283925 has been marked as a duplicate of this bug. ***
Comment 5 Christoph Feck 2011-11-12 15:39:47 UTC
If it is intended, then I would like to understand why. Here, when I open a window that is wider than the screen, I cannot move the window so that I see the contents of the initially hidden part, and I also cannot reach the "unmaximize" button, because I cannot move the buttons into view.
Comment 6 Thomas Lübking 2011-11-12 15:47:03 UTC
http://git.reviewboard.kde.org/r/103029/
Comment 7 Thomas Lübking 2011-11-12 18:30:28 UTC
Git commit 1d468ea69184e08319414739e4b4a14afb7c9b3d by Thomas Lübking.
Committed on 02/11/2011 at 21:13.
Pushed by luebking into branch 'master'.

checkWorspacePosition on screen changes only

REVIEW: 103029
BUG: 283302

M  +1    -0    kwin/client.h
M  +2    -1    kwin/geometry.cpp

http://commits.kde.org/kde-workspace/1d468ea69184e08319414739e4b4a14afb7c9b3d
Comment 8 Christoph Feck 2012-06-25 19:03:52 UTC
The bug is back (using master).
Comment 9 Thomas Lübking 2012-06-25 19:20:02 UTC
thanks for the notice
i deleted a bit too much in 33ffe90128df6ae038b27bd9c9371acacaeee098

RR:
https://git.reviewboard.kde.org/r/105360/

If Martin doesn't notice until 22:00 CEST i'll just push it
Comment 10 Thomas Lübking 2012-06-25 20:07:34 UTC
Git commit 30b92da4bd733b58b7d27eb58ca1f3e6984b9091 by Thomas Lübking.
Committed on 25/06/2012 at 21:54.
Pushed by luebking into branch 'KDE/4.9'.

re-fix bug #283302

broke by accident with 33ffe90128df6ae038b27bd9c9371acacaeee098
REVIEW: 105360
FIXED-IN: 4.9rc1

M  +1    -0    kwin/geometry.cpp

http://commits.kde.org/kde-workspace/30b92da4bd733b58b7d27eb58ca1f3e6984b9091