checkWorspacePosition on screen changes only

REVIEW: 103029
BUG: 283302